--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ bootstrap/compiled.php
 app/storage/
 
 # Laravel 5 & Lumen specific
-bootstrap/cache/
-storage/
+#bootstrap/cache/
+#storage/
 .env.*.php
 .env.php
 .env
