后台功能以及部分bug

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         },
         "files": [
             "app/Helpers/HttpHelper.php",
-            "app/Helpers/cdn.php"
+            "app/Helpers/cdn.php",
+            "app/Helpers/Menu.php"
         ]
     },
     "autoload-dev": {
